# winston_rs

./: .gitignore  Cargo.toml  README.md  new-readme.md
benches/: global_logger_performance.rs  logger_benchmark.rs
src/: global.rs  lib.rs  log_macros.rs  logger.rs  logger_builder.rs  logger_levels.rs  logger_options.rs  logger_transport.rs  rebuilder.rs
src/logger/: create_log_methods.rs  create_logger.rs  custom_levels.rs  default_levels.rs  log_entry.rs  log_macros.rs  log_query.rs  logger_builder.rs  logger_levels.rs  logger_options.rs  logger_worker.rs  mod.rs
src/logger/transports/: console.rs  file.rs  mod.rs
src/logger_v2/: mod.rs  transport.rs
src/logger_v3/: logger_builder.rs  logger_options.rs  mod.rs
src/logger_v3/transports/: transport.rs
src/playground/v4/: mod.rs
src/playground/v5/: mod.rs
src/playground/v6/: logger.rs
src/playgrounnd/: logger.rs  mod.rs  transport.rs
src/playgrounnd/v6/: transport.rs
src/transports/: file.rs  mod.rs  proxy.rs
tests/: add_and_remove_transport.rs  backpressure.rs  common_usage_test.rs  concurrency.rs  default_logger.rs  error_handling.rs  global_logger.rs  global_logger_close.rs  global_logger_configure.rs  global_logger_uninitialized.rs  log_backend.rs  log_backend_integration.rs  logger_query.rs  macros.rs  public_api.rs
tests/common/: mod.rs
tests/logger_v2/: common_usage.rs
tests/logger_v3/: common_usage.rs
