[package]
name = "winston"
version = "0.4.1"
edition = "2021"
description = "winston for rust"
license = "MIT"
documentation = "https://docs.rs/winston"
repository = "https://github.com/ifeanyi-ugwu/winston_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "logger", "logging"]
categories = ["development-tools::debugging"]


[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
logform = "0.4.0"
parking_lot = "0.12.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
winston_proxy_transport = "0.2.0"
winston_transport = "0.4.2"


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "logger_benchmark"
harness = false

[[bench]]
name = "global_logger_performance"
harness = false

[profile.bench]
debug = true
